--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -1,1 +1,125 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Ken's Laboratory</title>
+  
+  <!-- リセットCSS -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css"> -->
+  <link rel="stylesheet" href="../reset.css">
 
+  <!-- style.css -->
+  <link rel="stylesheet" href="template.css">
+  
+  <!-- Google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Noto+Sans+JP:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
+</head>
+  
+<body>
+  
+  <!-- ヘッダー（サイト名、メニュー） -->
+  <header>
+    <div class="container flex pop">
+      <a href="" class="logo">
+        <span>Ken's</span> Laboratory
+      </a>
+      <nav>
+        <ul class="header_menu flex">
+          <li><a href="#about me">About me</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#studynotebook">StudyNotebook</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <!-- トップ画像（サムネイル）を表示 -->
+    <section id="hero" class="container">
+      <img src="./images/top_image.jpg" alt="">
+    </section>
+
+    <section id="subject" class="container">
+      <h2 class="title pop">Portfolio</h2>　<!-- (Portfolio)or(Study Notebook) -->
+      <h3>このホームページ</h3>
+      <div class="column">
+        <p class="text">
+          これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+          これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+          これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+        </p>
+      </div>
+      <div class="flex">
+        <div class="column-2">
+          <p class="text">
+            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。
+          </p>
+        </div>
+        <div class="column-2 concept-img"></div>
+      </div>
+    </section>
+
+  <!-- 以下テンプレ集 -->
+    <!-- テンプレ1　文章のみ 
+
+     <div class="column">
+        <p class="text">
+          これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+          これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+          これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。
+        </p>
+      </div>
+
+    -->
+    <!-- テンプレ2　左が「文章」、右が「画像」
+
+     <div class="flex">
+        <div class="column-2">
+          <p class="text">
+            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。
+          </p>
+        </div>
+        <div class="column-2">
+          <img src="./images/top_image.jpg" alt="">
+        </div>
+      </div>
+
+    -->
+    <!-- テンプレ2　左が「画像」、右が「文章」 
+
+     <div class="flex">
+        <div class="column-2">
+          <img src="./images/top_image.jpg" alt="">
+        </div>
+        <div class="column-2">
+          <p class="text">
+            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。
+          </p>
+        </div>
+      </div>
+
+    -->
+
+    
+  <!-- フッター（ページの一番下にロゴを表示） -->
+  <footer>
+    <a href="" class="logo">
+      <span>Ken's</span> Laboratory
+    </a>
+    <div class="copyright">© Ken's Laboratory</div>
+  </footer>
+  
+</body>
+
+</html>
