--- a/index.html
+++ b/index.html
@@ -76,13 +76,14 @@
     <div class="card-group">
 
       <div class="card">
+        <a href="Homepage_creation.html"></a>
         <div class="card__imgframe"></div>
         <div class="card__textbox">
           <div class="card__titletext">
-            Coming Soon.....
+            このホームページ
           </div>
           <div class="card__overviewtext">
-            Coming Soon.....
+            HTMLとCSSを独学で勉強し、作成しました。
           </div>
         </div>
       </div>
