--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="card-group">
 
       <div class="card">
-        <a href="Homepage_creation.html"></a>
+        <a href="../portfolio/Homepage_creation.html"></a>
           <div class="card__imgframe"></div>
           <div class="card__textbox">
             <div class="card__titletext">
