--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../reset.css">
 
   <!-- style.css -->
-  <link rel="stylesheet" href="template.css">
+  <link rel="stylesheet" href="../template/template.css">
   
   <!-- Google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
