--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <title>Ken's Laboratory</title>
+
+  <a href="../index.html">
+    <title>Ken's Laboratory</title>
+  </a>a
   
   <!-- リセットCSS -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css"> -->
