--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <a href="../index.html">
-    <title>Ken's Laboratory</title>
-  </a>a
+  <title>Ken's Laboratory</title>
   
   <!-- リセットCSS -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css"> -->
@@ -27,7 +25,7 @@
   <!-- ヘッダー（サイト名、メニュー） -->
   <header>
     <div class="container flex pop">
-      <a href="" class="logo">
+      <a href="../index.html" class="logo">
         <span>Ken's</span> Laboratory
       </a>
       <nav>
