--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -30,9 +30,9 @@
       </a>
       <nav>
         <ul class="header_menu flex">
-          <li><a href="#about me">About me</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#studynotebook">StudyNotebook</a></li>
+          <li><a href="../index.html#about me">About me</a></li>
+          <li><a href="../index.html#portfolio">Portfolio</a></li>
+          <li><a href="../index.html#studynotebook">StudyNotebook</a></li>
         </ul>
       </nav>
     </div>
