--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 
       <div class="card">
         <a href="../portfolio/Homepage_creation.html">
-          <div class="card__imgframe"></div>
+          <div class="card__imgframe">
+            <img src="./images/Homepage_creation1.jpg">
+          </div>
           <div class="card__textbox">
             <div class="card__titletext">
               このホームページ
