--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="card">
         <a href="../portfolio/Homepage_creation.html">
           <div class="card__imgframe">
-            <img src="./images/Homepage_creation1.jpg">
+            <img src="./images/Homepage_creation1.png">
           </div>
           <div class="card__textbox">
             <div class="card__titletext">
