--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
 
       <div class="card">
         <a href="../portfolio/Homepage_creation.html">
-          <div class="card__imgframe">
-            <img src="./images/Homepage_creation1.png">
-          </div>
+          <div class="card__imgframe" style="background: url(./images/Homepage_creation1.png);"></div>
           <div class="card__textbox">
             <div class="card__titletext">
               このホームページ
