--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -41,7 +41,7 @@
   <main>
     <!-- トップ画像（サムネイル）を表示 -->
     <section id="hero" class="container">
-      <img src="./images/top_image.jpg" alt="">
+      <img src="./images/Homepage_creation1.png" alt="">
     </section>
 
     <section id="subject" class="container">
