--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -25,7 +25,7 @@
   <!-- ヘッダー（サイト名、メニュー） -->
   <header>
     <div class="container flex pop">
-      <a href="../index.html" class="logo">
+      <a href="../index.html#top" class="logo">
         <span>Ken's</span> Laboratory
       </a>
       <nav>
@@ -114,7 +114,7 @@
     
   <!-- フッター（ページの一番下にロゴを表示） -->
   <footer>
-    <a href="" class="logo">
+    <a href="../index.html#top" class="logo">
       <span>Ken's</span> Laboratory
     </a>
     <div class="copyright">© Ken's Laboratory</div>
