--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <div class="card-group">
 
       <div class="card">
-        <a href="../portfolio/Homepage_creation.html">
-          <div class="card__imgframe" style="background: url(./images/Homepage_creation1.png);"></div>
+        <a href="../portfolio/Homepage_creation.html#top">
+          <div class="card__imgframe" style="background: url(./images/Homepage_creation1.png);" width=auto height=auto ></div>
           <div class="card__textbox">
             <div class="card__titletext">
               このホームページ
