--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <div class="card">
         <a href="../portfolio/Homepage_creation.html#top">
-          <div class="card__imgframe" style="background: url(./images/Homepage_creation1.png);" width=auto height=auto ></div>
+          <div class="card__imgframe" style="background: url(./images/Homepage_creation1.png) no-repeat center center / cover;"></div>
           <div class="card__textbox">
             <div class="card__titletext">
               このホームページ
