Homepage_creation.html を更新

--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -46,12 +46,17 @@
 
     <section id="subject" class="container">
       <h2 class="title pop">Portfolio</h2>　<!-- (Portfolio)or(Study Notebook) -->
-      <h3>このホームページ</h3>
+      <h3>Ken's Laboratory</h3>
       <div class="column">
         <p class="text">
+          このWebページです。
+          ポートフォリオサイトを作成するにあたり、WixやWordPressなどのサイト作成プラットフォームを使おうか迷いましたが、以前よりHTMLとCSSに興味があったこともあり、自分なりに作ってみる事にしました。<br> <br>
+          自己紹介やポートフォリオ、勉強したことの記録などをしようと思い、作成しました。<br> <br>
+          HTML,CSSはこれまで触れたことがなかったので、独学で学ぶことは大変でしたが、なんとか形にすることができたと感じています。もちろん改善点は多くあるので、これからもっと深く学び、身につけた知識をもとに適宜改良していこうと思います。<br> <br>
           これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
           これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
-          これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
+          ・youtubeのリンクを載せる（参考文献として）
+          ・まだ理解できていない部分も多いことを書く
         </p>
       </div>
       <div class="flex">
