--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -60,12 +60,20 @@
       <div class="flex">
         <div class="column-2">
           <p class="text">
-            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
-            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。<br> <br>
-            これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。これは例の文章です。
+            N予備校<br> <br>
+            プログラミング入門:Webアプリケーション開発1<br> <br>
           </p>
         </div>
-        <div class="column-2 concept-img"></div>
+        <img src="../images/Homepage_creation1.png" alt="">
+      </div>
+      <div class="flex">
+        <div class="column-2">
+          <p class="text">
+            youtube<br> <br>
+            【実践】HTML・CSSでホームページを作りながら解説します【コーディングLIVE】<br> <br>
+          </p>
+        </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GXu-7d3yA_U?si=3PmOO8XB9SfUA7Yw"></iframe>
       </div>
     </section>
 
