--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -64,7 +64,7 @@
             プログラミング入門:Webアプリケーション開発1<br> <br>
           </p>
         </div>
-        <img src="../images/Homepage_creation1.png" alt="">
+        <img width="560" height="315" src="../images/Homepage_creation1.png" alt="">
       </div>
       <div class="flex">
         <div class="column-2">
