--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -54,14 +54,14 @@
           ポートフォリオサイトを作成するにあたり、WixやWordPressなどのサイト作成プラットフォームを使おうか迷いましたが、以前よりHTMLとCSSに興味があったこともあり、自分なりに作ってみる事にしました。<br> <br>
           自己紹介やポートフォリオ、勉強したことの記録などをしようと思い、作成しました。
           HTML,CSSはこれまで触れたことがなかったので、独学で学ぶことは大変でしたが、なんとか形にすることができたと感じています。もちろん改善点は多くあるので、これからもっと深く学び、身につけた知識をもとに適宜改良していこうと思います。<br> <br>
-          参考にした教材は以下の二つです。<br> <br>
+          参考にした教材は以下の二つです。<br>
         </p>
       </div>
       <div class="flex">
         <div class="column-2">
           <p class="text">
-            N予備校<br> <br>
-            プログラミング入門:Webアプリケーション開発1<br> <br>
+            N予備校<br>
+            プログラミング入門:Webアプリケーション開発1<br>
           </p>
         </div>
         <img width="560" height="315" src="../images/Homepage_creation1.png" alt="">
@@ -69,8 +69,8 @@
       <div class="flex">
         <div class="column-2">
           <p class="text">
-            youtube<br> <br>
-            【実践】HTML・CSSでホームページを作りながら解説します【コーディングLIVE】<br> <br>
+            youtube<br>
+            【実践】HTML・CSSでホームページを作りながら解説します【コーディングLIVE】<br>
           </p>
         </div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/GXu-7d3yA_U?si=3PmOO8XB9SfUA7Yw"></iframe>
