--- a/portfolio/Homepage_creation.html
+++ b/portfolio/Homepage_creation.html
@@ -64,7 +64,7 @@
             プログラミング入門:Webアプリケーション開発1<br>
           </p>
         </div>
-        <img src="../images/Homepage_creation1.png" alt="">
+        <img width="560" height="315" src="../images/Homepage_creation1.png" alt="">
       </div>
       <div class="flex">
         <div class="column-2">
@@ -73,7 +73,7 @@
             【実践】HTML・CSSでホームページを作りながら解説します【コーディングLIVE】<br>
           </p>
         </div>
-        <iframe src="https://www.youtube.com/embed/GXu-7d3yA_U?si=3PmOO8XB9SfUA7Yw" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GXu-7d3yA_U?si=3PmOO8XB9SfUA7Yw" allowfullscreen></iframe>
       </div>
     </section>
 
