--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="card-group">
 
       <div class="card">
-        <a href="../portfolio/Homepage_creation.html#top">
+        <a href="./portfolio/Homepage_creation.html#top">
           <div class="card__imgframe" style="background: url(./images/Homepage_creation1.png) no-repeat center center / cover;"></div>
           <div class="card__textbox">
             <div class="card__titletext">
@@ -145,15 +145,17 @@
     <div class="card-group">
 
       <div class="card">
-        <div class="card__imgframe"></div>
-        <div class="card__textbox">
-          <div class="card__titletext">
-            Coming Soon.....
+        <a href="./studynotebook/NINNO_ACCADEMIA_AI.html#top">
+          <div class="card__imgframe" style="background: url(./images/NINNO_ACCADEMIA.png) no-repeat center center / cover;"></div>
+          <div class="card__textbox">
+            <div class="card__titletext">
+              NINNO ACCADEMIA AIマスターコース
+            </div>
+            <div class="card__overviewtext">
+              MetAI社の社長による、90分×4回の講座です。
+            </div>
           </div>
-          <div class="card__overviewtext">
-            Coming Soon.....
-          </div>
-        </div>
+        </a>
       </div>
 
       <div class="card">
