--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="card-group">
 
       <div class="card">
-        <a href="./studynotebook/NINNO_ACCADEMIA_AI.html#top">
+        <a href="./studynotebook/NINNO_ACCADEMIA_AI/NINNO_ACCADEMIA_AI_home.html">
           <div class="card__imgframe" style="background: url(./images/NINNO_ACCADEMIA.png) no-repeat center center / cover;"></div>
           <div class="card__textbox">
             <div class="card__titletext">
