--- a/studynotebook/NINNO_ACCADEMIA_AI/NINNO_ACCADEMIA_AI_home.html
+++ b/studynotebook/NINNO_ACCADEMIA_AI/NINNO_ACCADEMIA_AI_home.html
@@ -63,7 +63,7 @@
         <div class="card-group">
 
           <div class="card">
-            <a href="./NINNO_ACCADEMIA_AI_1.html#top">
+            <a href="../NINNO_ACCADEMIA_AI_1.html#top">
               <div class="card__imgframe" style="background: url(../../images/NINNO_AI_1_top.png) no-repeat center center / cover;"></div>
               <div class="card__textbox">
                 <div class="card__titletext">
