--- a/studynotebook/NINNO_ACCADEMIA_AI/NINNO_ACCADEMIA_AI_1.html
+++ b/studynotebook/NINNO_ACCADEMIA_AI/NINNO_ACCADEMIA_AI_1.html
@@ -206,9 +206,11 @@
     -->
 
     
+  </main>
+
   <!-- フッター（ページの一番下にロゴを表示） -->
   <footer>
-    <a href="../index.html#top" class="logo">
+    <a href="../../index.html#top" class="logo">
       <span>Ken's</span> Laboratory
     </a>
     <div class="copyright">© Ken's Laboratory</div>
