--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
     <div class="card-group">
 
       <div class="card">
+        <a href="./portfolio/tgt37.html#top">
+          <div class="card__imgframe" style="background: url(./images/tgt37_top.png) no-repeat center center / cover;"></div>
+          <div class="card__textbox">
+            <div class="card__titletext">
+              【学会発表】第37回位相幾何学的グラフ理論研究集会
+            </div>
+            <div class="card__overviewtext">
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="card">
         <a href="./portfolio/Homepage_creation.html#top">
           <div class="card__imgframe" style="background: url(./images/Homepage_creation1.png) no-repeat center center / cover;"></div>
           <div class="card__textbox">
@@ -87,18 +100,6 @@
             </div>
           </div>
         </a>
-      </div>
-
-      <div class="card">
-        <div class="card__imgframe"></div>
-        <div class="card__textbox">
-          <div class="card__titletext">
-            Coming Soon.....
-          </div>
-          <div class="card__overviewtext">
-            Coming Soon.....
-          </div>
-        </div>
       </div>
 
       <div class="card">
