--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Ken's Laboratory</title>
+
+  <!-- ファビコン -->
+  <link rel="icon" href="favicon.ico">
   
   <!-- リセットCSS -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css"> -->
