--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Ken's Laboratory</title>
-
+  
   <!-- ファビコン -->
   <link rel="icon" href="favicon.ico">
-  
+
   <!-- リセットCSS -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css"> -->
   <link rel="stylesheet" href="reset.css">
@@ -79,6 +79,19 @@
     <div class="card-group">
 
       <div class="card">
+        <a href="./portfolio/25_inseikai_srp.html#top">
+          <div class="card__imgframe" style="background: url(./images/25_inseikai_srp_top.png) no-repeat center center / cover;"></div>
+          <div class="card__textbox">
+            <div class="card__titletext">
+              【学内発表】令和7年度 新潟大学院生会 第5回研究発表会
+            </div>
+            <div class="card__overviewtext">
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="card">
         <a href="./portfolio/tgt37.html#top">
           <div class="card__imgframe" style="background: url(./images/tgt37_top.png) no-repeat center center / cover;"></div>
           <div class="card__textbox">
@@ -103,18 +116,6 @@
             </div>
           </div>
         </a>
-      </div>
-
-      <div class="card">
-        <div class="card__imgframe"></div>
-        <div class="card__textbox">
-          <div class="card__titletext">
-            Coming Soon.....
-          </div>
-          <div class="card__overviewtext">
-            Coming Soon.....
-          </div>
-        </div>
       </div>
 
       <div class="card">
